--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,3 +1,16 @@
+# This file is part of pawt.
+#
+# Makefile, to compile the example programs
+#
+# Copyright 2018 LIPN, CNRS UMR 7030, Université Paris 13, 
+#                Sorbonne-Paris-Cité. All rights reserved.
+# Author: see AUTHORS
+# Licence: GPL-3.0, see COPYING for details.
+#
+# Additional copyrights may follow
+#
+# $HEADER$
+
 PAWT = -L.. -lpawt
 CC = gcc
 CCOPT = -g -Wall -O3
